<resources>
    <string name="app_name">Workout App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_to_your_account_and_start_working_out">Sign In to your account and start working out!</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">welcome back!</string>
    <string name="enter_login_details">Enter Login Details</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="good_afternoon">good afternoon</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_to_continue">Sign up to continue!</string>
    <string name="enter_details">Enter Details</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="hello">hello</string>
    <string name="get_you_account_back_reset_password">Get Your account back. Reset Password</string>
    <string name="verify">Verify</string>
    <string name="otp_here">OTP here</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp_that_you_received_on_your_mail">Enter OTP that you received on your mail</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm New password</string>
    <string name="update_password">Update Password</string>
    <string name="update_smal_password">update password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="or">or</string>
    <string name="calendar">Calendar</string>
    <string name="workouts">Workouts</string>
    <string name="enter_session_name">Enter Session Name</string>
    <string name="session_name">Session Name</string>
    <string name="note_this_session_name_cannot_be_updated_later">Note: This session name cannot be updated later</string>
    <string name="this_is_some_random_comment_for_visualization_purpose">This is some random comment. For visualization purpose</string>
    <string name="comment">Comment</string>
    <string name="dead_lift">Dead Lift</string>
    <string name="_25">25</string>
    <string name="kilos">Kilos</string>
    <string name="reps">Reps:</string>
    <string name="_20">20</string>
    <string name="sets">Sets:</string>
    <string name="_50">50</string>
    <string name="plus">+</string>
    <string name="note_all_fields_are_mandatory">Note: All fields are mandatory</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exit_app">Exit App</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>