<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_back"
    tools:context=".Fragments.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/logo"
                    android:elevation="3dp"
                    android:src="@drawable/ic_logo"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/logo"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans"
                        android:textSize="15sp"
                        android:text="@string/already_have_an_account" />

                    <TextView
                        android:id="@+id/signIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/sign_in" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sacramento"
                android:text="@string/welcome"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="20dp"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="#000"
                android:text="@string/sign_up_to_continue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:textSize="18sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                android:textColor="#000"
                android:text="@string/enter_details" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top_edittext"
                    android:hint="@string/your_name"
                    android:padding="20dp"
                    android:textColorHint="#a9a9a9"
                    android:textColor="#272626"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    android:fontFamily="@font/nunito_sans"
                    android:lineSpacingExtra="5.3sp"
                    />

                <EditText
                    android:id="@+id/age"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textColorHint="#a9a9a9"
                    android:textColor="#272626"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/middle_edittext"
                    android:hint="@string/age"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:layout_marginTop="-2dp"
                    android:fontFamily="@font/nunito_sans"
                    android:lineSpacingExtra="5.3sp"
                    />

                <EditText
                    android:id="@+id/height"
                    android:singleLine="true"
                    android:textColorHint="#a9a9a9"
                    android:textColor="#272626"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/middle_edittext"
                    android:hint="@string/height"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:layout_marginTop="-2dp"
                    android:fontFamily="@font/nunito_sans"
                    android:lineSpacingExtra="5.3sp"
                    />

                <EditText
                    android:id="@+id/weight"
                    android:singleLine="true"
                    android:textColorHint="#a9a9a9"
                    android:textColor="#272626"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/middle_edittext"
                    android:hint="@string/weight"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:layout_marginTop="-2dp"
                    android:maxLength="3"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/nunito_sans"
                    android:lineSpacingExtra="5.3sp"
                    />

                <EditText
                    android:id="@+id/email"
                    android:singleLine="true"
                    android:textColorHint="#a9a9a9"
                    android:textColor="#272626"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/middle_edittext"
                    android:hint="@string/email"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:layout_marginTop="-2dp"
                    android:fontFamily="@font/nunito_sans"
                    android:lineSpacingExtra="5.3sp"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#a9a9a9"
                    android:textColor="#272626"
                    android:background="@drawable/middle_edittext"
                    android:hint="@string/password"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:layout_marginTop="-2dp"
                    android:fontFamily="@font/nunito_sans"
                    android:drawableEnd="@drawable/ic_lock_icon"
                    android:lineSpacingExtra="5.3sp"
                    />

                <EditText
                    android:id="@+id/confirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#a9a9a9"
                    android:textColor="#272626"
                    android:background="@drawable/bottom_edittext"
                    android:hint="@string/confirm_password"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:layout_marginTop="-2dp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/nunito_sans"
                    android:drawableEnd="@drawable/ic_lock_icon"
                    android:lineSpacingExtra="5.3sp"
                    />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_filled_back"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:elevation="3dp"
                android:layout_marginBottom="40dp"
                android:padding="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:fontFamily="@font/nunito_sans"
                    android:textSize="20sp"
                    android:drawablePadding="7dp"/>

            </RelativeLayout>




        </LinearLayout>

    </ScrollView>
</LinearLayout>
