<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/allround_editext"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        android:id="@+id/title"
        android:padding="20dp"
        android:background="@color/white"
        android:fontFamily="@font/nunito_sans_bold"
        android:textSize="20sp"
        android:textColor="#373636"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:text="Do you want to close the app?"
            android:textSize="20sp"
            android:fontFamily="@font/nunito_sans"
            android:textColor="#333232"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:elevation="5dp"
            android:id="@+id/no"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textAlignment="center"
            android:padding="10dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/blue_filled_back"/>

        <TextView
            android:elevation="5dp"
            android:id="@+id/yes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:fontFamily="@font/nunito_sans_bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@drawable/allround_editext"/>

    </LinearLayout>

</LinearLayout>