<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:textColor="#000"
        android:text="@string/enter_session_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/sessionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/allround_editext"
            android:hint="@string/session_name"
            android:textColorHint="#a9a9a9"
            android:textColor="#272626"
            android:padding="20dp"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textSize="15sp"
            android:fontFamily="@font/nunito_sans"
            android:lineSpacingExtra="5.3sp"
            />

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textColor="#7A7A7C"
            android:textStyle="bold"
            android:text="@string/note_this_session_name_cannot_be_updated_later" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_filled_back"
        android:layout_margin="20dp"
        android:elevation="3dp"
        android:padding="18dp"
        android:id="@+id/createSession">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Create Session"
            android:textColor="#fff"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:fontFamily="@font/nunito_sans"
            android:textSize="20sp"
            android:drawablePadding="7dp"/>

    </RelativeLayout>

</LinearLayout>